--- a/.editorconfig
+++ b/.editorconfig
@@ -8,8 +8,37 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
+[*.blade.php]
+indent_style = space
+indent_size = 2
+
+[*.html]
+indent_style = space
+indent_size = 2
+
+[*.vue]
+indent_style = space
+indent_size = 2
+
+[*.jsx]
+indent_style = space
+indent_size = 2
+
+[*.js]
+indent_style = tab
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yml,yaml}]
+[*.yml]
+indent_style = space
+indent_size = 2
+
+[composer.json]
+indent_style = space
+indent_size = 4
+
+[*.json]
+indent_style = space
 indent_size = 2
